--- a/templates/advanced_results.html
+++ b/templates/advanced_results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Recommendations for {{ movie_name }}</title>
+    <title>Advanced Search Results</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
         .head{
@@ -26,26 +26,21 @@
     <div class="head">
         <h1>Checkout Your Results :)</h1>
     </div>
-    <div  id="cont" class="container mt-5">
-        <h1>Recommendations for "{{ movie_name }}"</h1>
-        {% if recommendations %}
+    <div id="cont" class="container mt-5">
+        <h1>Search Results</h1>
+        {% if movies %}
             <ul class="list-group">
-                {% for movie in recommendations %}
+                {% for movie in movies %}
                 <li class="list-group-item">
                     <a href="/movie/{{ movie['Movie Name'] }}"><strong>{{ movie['Movie Name'] }}</strong></a>
-                    ({{ movie['Year'] }}) - Genre: {{ movie['Genre'] }} |
-                    Rotten Tomatoes: {{ movie['Tomatometer Score'] }} | IMDb: {{ movie['imdbRating'] }}
+                    ({{ movie['Year'] }}) - Genre: {{ movie['Genre'] }}
                 </li>
                 {% endfor %}
             </ul>
         {% else %}
-            {% if not movie_name %}
-                <p>No movie name was submitted. Please enter a movie name.</p>
-            {% else %}
-                <p>No recommendations found for "{{ movie_name }}". Please try another movie.</p>
-            {% endif %}
+            <p>No movies found. Try adjusting your search criteria.</p>
         {% endif %}
-        <a href="/" class="btn btn-primary mt-3">Back to Home</a>
+        <a href="/" class="btn btn-primary mt-4">Back to Home</a>
     </div>
 </body>
 </html>
